add background color to nav

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,14 @@ ul {
     list-style: none;
 }
 
+/* Classes */
+.navbar {
+    background-color: hsl(60, 80%, 47%);
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+
+
 /* Keyframes */
 
 /* Media Queries */
