--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,10 @@ a {
     text-decoration: none;
 }
 
+button:hover {
+    font-weight: bold;
+}
+
 img {
     max-width: 100%;
 }
@@ -37,6 +41,15 @@ ul {
     padding: 0.5rem;
 }
 
+
+/* Paginaiton */
+nav .hidden.sm\:flex-1.sm\:flex.sm\:items-center.sm\:justify-between>div:nth-child(1)>p {
+    margin-top: 10px;
+}
+
+nav>div.hidden.sm\:flex-1.sm\:flex.sm\:items-center.sm\:justify-between>div:nth-child(2) {
+    display: none;
+}
 
 /* Keyframes */
 
