modify potato search width

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,6 +34,15 @@ ul {
     list-style: none;
 }
 
+/* Paginaiton */
+nav .hidden.sm\:flex-1.sm\:flex.sm\:items-center.sm\:justify-between>div:nth-child(1)>p {
+    margin-top: 1.25rem;
+}
+
+nav>div.hidden.sm\:flex-1.sm\:flex.sm\:items-center.sm\:justify-between>div:nth-child(2) {
+    display: none;
+}
+
 /* Classes */
 .navbar {
     background-color: hsl(60, 80%, 47%);
@@ -41,14 +50,8 @@ ul {
     padding: 0.5rem;
 }
 
-
-/* Paginaiton */
-nav .hidden.sm\:flex-1.sm\:flex.sm\:items-center.sm\:justify-between>div:nth-child(1)>p {
-    margin-top: 10px;
-}
-
-nav>div.hidden.sm\:flex-1.sm\:flex.sm\:items-center.sm\:justify-between>div:nth-child(2) {
-    display: none;
+.potatoSearch {
+    width: 250px;
 }
 
 /* Keyframes */
