--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,6 +41,11 @@ ul {
 
 /* Classes */
 
+.crisp_image_mix {
+    max-width: 820px;
+    width: 100%;
+}
+
 .img-thumbnail {
     max-width: 250px;
 }
