--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,6 +70,10 @@ ul {
 
 @media(max-width: 960px) {}
 
-@media(max-width:768px) {}
+@media(max-width:768px) {
+    .index-list div {
+        width: 100%;
+    }
+}
 
 @media(min-width: 1440px) {}
